fix : image alignment

--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ body{
     background-image: url(/images/birthday3.svg);
     font-family: sans-serif;
     font-size: larger;
+    background-repeat: no-repeat;
+    background-position: top;
 }
 
 h2{
